--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@react-google-maps/api": "^2.20.3",
     "framer-motion": "^11.11.9",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.4",
     "next": "14.2.15",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
